Fix symbol line breaks in Firefox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ pre {
     font-family: 'Source Code Pro', monospace;
     white-space: pre-wrap;
     word-break: break-all;
+    line-break: anywhere;
     overflow: hidden;
     margin: 0;
 }
